salesforce/force-app/main/default/objects/CustomDetector__mdt/CustomDetector__mdt.object-meta.xml
<CustomObject>
    <description>Phase 19b — admin-defined detectors. Each record carries a SOQL query plus templates that turn each returned row into a ForensicFinding. No Apex required to add a new detector — write SOQL in Setup, get findings on next scan.</description>
    <label>Custom Detector</label>
    <pluralLabel>Custom Detectors</pluralLabel>
</CustomObject>