salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/AppliesTo__c.field-meta.xml
<CustomField>
    <fullName>AppliesTo__c</fullName>
    <label>Applies To</label>
    <description>Semicolon-separated product types this detector runs for (CPQ;CPQ+Billing;ARM).</description>
    <type>Text</type><length>120</length>
</CustomField>