salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <description>revenue | governance | pipeline | pricing</description>
    <type>Text</type><length>40</length>
</CustomField>