salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/DescriptionTemplate__c.field-meta.xml
<CustomField>
    <fullName>DescriptionTemplate__c</fullName>
    <label>Description Template</label>
    <description>Multi-line finding description. Supports {ColumnName} tokens.</description>
    <type>LongTextArea</type><length>3000</length><visibleLines>3</visibleLines>
</CustomField>