salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/DetectorId__c.field-meta.xml
<CustomField>
    <fullName>DetectorId__c</fullName>
    <label>Detector Id</label>
    <description>Unique identifier for this custom detector (e.g. CUST-001). Lands on ForensicFinding__c.DetectorId__c.</description>
    <type>Text</type><length>40</length><required>true</required><unique>true</unique><externalId>true</externalId>
</CustomField>