salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/EntitledUsdField__c.field-meta.xml
<CustomField>
    <fullName>EntitledUsdField__c</fullName>
    <label>Entitled USD Column</label>
    <description>Optional. SOQL column carrying the "what should be" $ value. Gap = Entitled - Realized.</description>
    <type>Text</type><length>80</length>
</CustomField>