salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <label>Long Description</label>
    <description>Admin-facing prose for this detector. Four lines: what it finds; why it matters; when to suppress a single finding; when to disable the detector entirely. Distinct from DescriptionTemplate__c which is the per-finding user-facing text.</description>
    <type>LongTextArea</type>
    <length>1024</length>
</CustomField>