salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/PrimaryRecordIdField__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRecordIdField__c</fullName>
    <label>Primary Record Id Column</label>
    <description>Name of the SOQL column whose value is the Id of the affected record (typically "Id"). Lands on ForensicFinding__c.PrimaryRecordId__c.</description>
    <type>Text</type><length>80</length>
</CustomField>