salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/PrimaryRecordType__c.field-meta.xml
<CustomField>
    <fullName>PrimaryRecordType__c</fullName>
    <label>Primary Record Type (sObject)</label>
    <description>sObject API name of the affected record (e.g. SBQQ__QuoteLine__c, Account). Lands on ForensicFinding__c.PrimaryRecordType__c.</description>
    <type>Text</type><length>80</length>
</CustomField>