salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/RealizedUsdField__c.field-meta.xml
<CustomField>
    <fullName>RealizedUsdField__c</fullName>
    <label>Realized USD Column</label>
    <description>Optional. SOQL column carrying the "what we're getting" $ value. Defaults to 0 when blank.</description>
    <type>Text</type><length>80</length>
</CustomField>