salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <description>Critical | Warning | Info. Phase 24j — moved onto CustomDetector__mdt so admins manage the editable detector entirely from one screen. Same semantics as Detector__mdt.Severity__c.</description>
    <type>Text</type>
    <length>16</length>
</CustomField>