salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/SoqlQuery__c.field-meta.xml
<CustomField>
    <fullName>SoqlQuery__c</fullName>
    <label>SOQL Query</label>
    <description>The SOQL whose rows become findings. Include a LIMIT clause (recommend LIMIT 5000). Include WITH SECURITY_ENFORCED if you want FLS-enforced results. Each returned row becomes one ForensicFinding.</description>
    <type>LongTextArea</type><length>32000</length><visibleLines>8</visibleLines>
</CustomField>