salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/TitleTemplate__c.field-meta.xml
<CustomField>
    <fullName>TitleTemplate__c</fullName>
    <label>Title Template</label>
    <description>One-line finding title. Use {ColumnName} tokens for any column returned by the SOQL query.</description>
    <type>Text</type><length>255</length>
</CustomField>