salesforce/force-app/main/default/objects/CustomDetector__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Number</type><precision>3</precision><scale>0</scale><defaultValue>1</defaultValue>
</CustomField>